# 7Wonder_Duel

./: README.md
7wonders_duel/: CMakeLists.txt  DELIVERY.md  Makefile  README.md  WINDOWS_SETUP.md  build_mingw.bat  build_windows.bat  card_data_extraction.md  implementation_details.md  implementation_plan.md  project_summary.md  run_game.bat
7wonders_duel/include/: Forward.h  Types.h
7wonders_duel/include/cards/: AllCards.h  Card.h  CardFactory.h  WonderCard.h
7wonders_duel/include/game/: CardStructure.h  Game.h  GameBoard.h  MilitaryTrack.h  ProgressToken.h  VictoryCondition.h
7wonders_duel/include/player/: HumanPlayer.h  Player.h  PlayerStrategy.h
7wonders_duel/include/resources/: Cost.h
7wonders_duel/include/ui/: ConsoleDisplay.h  InputHandler.h
7wonders_duel/src/: Types.cpp  main.cpp
7wonders_duel/src/cards/: AllCards.cpp  Card.cpp  CardFactory.cpp  WonderCard.cpp
7wonders_duel/src/game/: CardStructure.cpp  Game.cpp  GameBoard.cpp  MilitaryTrack.cpp  ProgressToken.cpp  VictoryCondition.cpp
7wonders_duel/src/player/: HumanPlayer.cpp  Player.cpp  PlayerStrategy.cpp
7wonders_duel/src/resources/: Cost.cpp
7wonders_duel/src/ui/: ConsoleDisplay.cpp  InputHandler.cpp
